# bandit2

./: .gitignore  epsilon_greedy_batch_inference_example.ipynb  epsilon_greedy_example.ipynb  pyproject.toml
examples/: epsilon_greedy_batch_inference_example.ipynb
notebooks/: scratch.ipynb
src/bandit/algorithms/: __init__.py  _standard.py  standard.py
src/bandit/simulation/: monte_carlo.py
src/bandit/testing/: _realtime_inference.py  monte_carlo.py
src/bandit/utility/: __init__.py  _utility_functions.py
