[tool.poetry]
name = "bandit"
version = "0.1.0"
description = "Module to develop and test multi-armed bandits"
authors = ["dan-kwon <danielkwon02@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
